Add ND trace collection foundation
