# openapi.json
@@ -2722,6 +2722,38 @@
               ],
               "title": "Trace Mode Group"
             }
+          },
+          {
+            "name": "axis_name",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "type": "string"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "title": "Axis Name"
+            }
+          },
+          {
+            "name": "collection_key",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "type": "string"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "title": "Collection Key"
+            }
           }
         ],
         "responses": {
